<resources>
    <string name="app_name">Pokédex</string>
    <string name="type">type</string>
    <string name="normal">normal</string>
    <string name="fighting">fighting</string>
    <string name="flying">flying</string>
    <string name="ground">ground</string>
    <string name="poison">poison</string>
    <string name="rock">rock</string>
    <string name="bug">bug</string>
    <string name="ghost">ghost</string>
    <string name="steel">steel</string>
    <string name="fire">fire</string>
    <string name="water">water</string>
    <string name="grass">grass</string>
    <string name="electric">electric</string>
    <string name="psychic">psychic</string>
    <string name="ice">ice</string>
    <string name="dragon">dragon</string>
    <string name="dark">dark</string>
    <string name="fairy">fairy</string>
    <string name="search">search</string>
    <string name="base_stats">Base Stats</string>
    <string name="atk">atk</string>
    <string name="def">def</string>
    <string name="satk">satk</string>
    <string name="sdef">sdef</string>
    <string name="spd">sdp</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="moves">moves</string>
    <string name="about">About</string>
    <string name="number">#</string>
    <string name="kg">kg</string>
    <string name="m">m</string>
    <string name="basic">basic</string>
    <string name="shiny">shiny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hp">hp</string>
    <string name="sharp_with_pokemon_id">#%1$s</string>
    <string name="btn_filter">filter boutton</string>
    <string name="search_pokemon_by_name">search by name</string>
    <string name="search_pokemon_by_id">search by id</string>
    <string name="img_thumb_pokemon">image thumb of pokemon</string>
    <string name="filter_by_name">Filter by name</string>
    <string name="filter_by_id">Filter by id</string>
    <string name="reset_filter">Reset filter</string>
</resources>