<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    tools:context=".ui.fragments.BodyPokemonDetailFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/White"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pokemon_type_1"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/light_progress_bar"
                    android:gravity="center"
                    tools:text="TYPE 1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_img"
                    style="@style/TypeTextAppearance"
                    android:layout_marginHorizontal="20dp"
                    />


                <TextView
                    android:id="@+id/pokemon_type_2"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/light_progress_bar"
                    android:gravity="center"
                    tools:text="TYPE 2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_img"
                    style="@style/TypeTextAppearance"
                    android:visibility="gone"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="40dp"
                android:text="@string/about"
                style="@style/TitleTextAppearance"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weight_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/weight"
                        tools:text="9.9 kg"
                        style="@style/TextLabelStatAppearance"/>

                    <TextView
                        android:id="@+id/weight_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:text="@string/weight"
                        style="@style/TextLabelAppearance"/>

                </LinearLayout>

                <!-- Divider -->
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/Light" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/height_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/straighten"
                        tools:text="9.9 m"
                        style="@style/TextLabelStatAppearance"/>

                    <TextView
                        android:id="@+id/height_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:text="@string/height"
                        style="@style/TextLabelAppearance"/>

                </LinearLayout>

                <!-- Divider -->
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/Light" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ability_value_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Ability 1"
                            style="@style/TextLabelStatAppearance"/>
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/ability_value_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Ability 2"
                            android:visibility="gone"
                            style="@style/TextLabelStatAppearance"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/ability_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moves"
                        style="@style/TextLabelAppearance"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="40dp"
                android:gravity="center"
                tools:text="MalorumDes Suprêmes Biens et des Suprêmes Maux) de Cicéron. Cet ouvrage, très populaire pendant la Renaissance, est un traité sur la théorie de l'éthique. Les premières lignes du Lorem Ipsum, Lorem ipsum dolor sit amet..., proviennent de la section"
                style="@style/TextResumeAppearance" />

            <TextView
                android:id="@+id/base_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/base_stats"
                style="@style/TitleTextAppearance"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10"
                android:padding="40dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <TextView
                        android:id="@+id/hp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hp"
                        style="@style/TextStatAppearance"
                        />

                    <TextView
                        android:id="@+id/atk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/atk"
                        style="@style/TextStatAppearance" />

                    <TextView
                        android:id="@+id/def"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/def"
                        style="@style/TextStatAppearance" />

                    <TextView
                        android:id="@+id/satk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/satk"
                        style="@style/TextStatAppearance" />

                    <TextView
                        android:id="@+id/sdef"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sdef"
                        style="@style/TextStatAppearance" />

                    <TextView
                        android:id="@+id/spd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/spd"
                        style="@style/TextStatAppearance" />

                </LinearLayout>
                <!-- Divider -->
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/Light" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <TextView
                        android:id="@+id/hp_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="999"
                        style="@style/TextStatAppearance" />

                    <TextView
                        android:id="@+id/atk_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="999"
                        style="@style/TextStatAppearance" />

                    <TextView
                        android:id="@+id/def_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="999"
                        android:textColor="@color/Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/satk_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="999"
                        style="@style/TextStatAppearance" />

                    <TextView
                        android:id="@+id/sdef_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="999"
                        style="@style/TextStatAppearance" />

                    <TextView
                        android:id="@+id/spd_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="999"
                        style="@style/TextStatAppearance" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <ProgressBar
                        android:id="@+id/hpProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:max="100"
                        android:paddingBottom="10dp"
                        android:progress="100"
                        android:progressDrawable="@drawable/light_progress_bar" />

                    <ProgressBar
                        android:id="@+id/atkProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:max="100"
                        android:paddingBottom="10dp"
                        android:progress="100"
                        android:progressDrawable="@drawable/light_progress_bar" />

                    <ProgressBar
                        android:id="@+id/defProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:max="100"
                        android:paddingBottom="10dp"
                        android:progress="100"
                        android:progressDrawable="@drawable/light_progress_bar" />

                    <ProgressBar
                        android:id="@+id/satkProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:max="100"
                        android:paddingBottom="10dp"
                        android:progress="100"
                        android:progressDrawable="@drawable/light_progress_bar" />

                    <ProgressBar
                        android:id="@+id/sdefProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:max="100"
                        android:paddingBottom="10dp"
                        android:progress="100"
                        android:progressDrawable="@drawable/light_progress_bar" />


                    <ProgressBar
                        android:id="@+id/spdProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:max="100"
                        android:progress="100"
                        android:layout_weight="1"
                        android:paddingBottom="10dp"

                        android:progressDrawable="@drawable/light_progress_bar" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</ScrollView>